# ChatFold-MVP

./: .env.defaults  .env.development  .env.example  .env.local.example  .env.production  .env.test  .gitattributes  .gitignore  .gitmodules  .mcp.json  .pre-commit-config.yaml  CLAUDE.md  README.md  TEST_AUTH.md  TODO.md  next.config.mjs  package-lock.json  playwright.config.ts  tailwind.config.ts  tsconfig.json  vitest.config.mts
.github/: labels.yml
.github/workflows/: sync-labels.yml
.husky/: pre-commit
backend/: .dockerignore  README.md  pyproject.toml  requirements.txt  ruff.toml
backend/app/: __init__.py  config.py  main.py  settings.py
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: auth.py  conversations.py  folders.py  health.py  jobs.py  structures.py  tasks.py  test_helpers.py  users.py
backend/app/components/: __init__.py
backend/app/components/nanocc/: __init__.py  client.py  folding.py  job.py  legacy_mock.py  mock.py
backend/app/components/workspace/: __init__.py  models.py  redis_storage.py  service.py  storage.py  storage_provider.py
backend/app/db/: __init__.py  models.py  mysql.py  redis_cache.py  redis_db.py  redis_factory.py
backend/app/models/: __init__.py  auth_schemas.py  schemas.py
backend/app/nanocc/: __init__.py  folding.py
backend/app/repositories/: __init__.py  base.py  job.py  job_event.py  learning_record.py  structure.py  task.py  task_event.py  user.py
backend/app/routers/: __init__.py  conversations.py  structures.py  tasks.py
backend/app/services/: __init__.py  auth_service.py  data_consistency.py  email_service.py  filesystem.py  job_state.py  memory_store.py  mock_folding.py  nanocc_client.py  nanocc_folding.py  runtime_storage.py  session_store.py  sse_events.py  storage.py  structure_storage.py  task_state.py  verification_service.py
backend/app/utils/: __init__.py  fasta_parser.py  id_generator.py  logging.py  pdb_generator.py  sequence_validator.py  time_utils.py
backend/app/workspace/: __init__.py  models.py  service.py  storage.py
backend/migrations/: 001_initial_schema.sql
backend/scripts/: db_reset.py  test_interrupt.py  test_nanocc_interrupt.sh  test_nanocc_with_file.py
backend/scripts/manual_tests/: auth_flow_manual.py
backend/tests/: README.md  __init__.py  conftest.py
backend/tests/e2e/: __init__.py  test_e2e_workflow.py
backend/tests/fixtures/: Mocking_CoT.nanocc.jsonl  Mocking_CoT.nanocc.sse.jsonl
backend/tests/fixtures/pdb_samples/: input_sequence_model_0.cif  model_0.cif  protenix_esm_463aa_seed_101_sample_0.cif  protenix_msa_463aa_Fold_s101_seed_101_sample_0.cif  protenix_msa_463aa_Fold_s102_seed_102_sample_0.cif  protenix_msa_463aa_Fold_s112_seed_112_sample_0.cif  protenix_msa_463aa_Fold_s122_seed_122_sample_0.cif
backend/tests/integration/: test_api_folders.py  test_api_users.py  test_auth_integration.py  test_jobs_redis_integration.py  test_multi_instance.py  test_mysql_persistence.py  test_redis_multi_db.py  test_tasks_redis_integration.py
backend/tests/unit/: test_data_consistency.py  test_filesystem.py  test_job_state_service.py  test_repositories.py  test_session_store.py  test_settings_paths.py  test_sse_events_service.py  test_task_state_service.py  test_verification_atomicity.py
backend/tests/unit/db/: __init__.py  test_redis_cache.py
chatfold-workspace/databases/: README.md
deploy/docker/: Dockerfile.backend  Dockerfile.web  docker-compose.multi-instance.yml  nginx-lb.conf
docs/: README.md  design_concept.md  molstar-quick-reference.md  molstar-usage-guide.md
docs/cooperation/: README.md  backend_concepts.md  collaboration_workflow.md  frontend_onboarding.md  work_items.md
docs/developer/: architecture.md  authentication.md  data_model.md  (+4 more)
fed/: .npmrc  .oxfmtrc.json  CLAUDE.md  README.md  package.json  pnpm-lock.yaml  turbo.json
scripts/: start-multi-instance.sh  test-multi-instance.sh  test_autofill.js
web/: next.config.mjs  package-lock.json  package.json  playwright.config.ts  tsconfig.json
(+168 files in other folders)
