[project]
name = "chatfold-backend"
version = "0.1.0"
description = "ChatFold - Protein folding workbench backend"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "ChatFold Team" }
]

dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic[email]>=2.5.0",  # Email validation
    "pydantic-settings>=2.1.0",
    "python-multipart>=0.0.6",
    "redis>=5.0.0",
    "fakeredis>=2.20.0",  # In-memory Redis for local development
    "python-ulid>=3.1.0",
    # MySQL persistence
    "sqlalchemy>=2.0.0",
    "pymysql>=1.1.0",
    "cryptography>=41.0.0",  # Required for PyMySQL SSL
    # Authentication
    "bcrypt>=4.0.0",  # Password hashing
    "python-jose[cryptography]>=3.3.0",  # JWT tokens
    # TOS storage
    "ditto @ git+https://github.com/spxix/Ditto.git@v0.2.0",
    "boto3>=1.34.0",  # Required by Ditto TOS client
    # HTTP client (used by NanoCC client at runtime)
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",  # For testing FastAPI
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# ==================== Tool Configurations ====================

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["app"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "I",      # isort
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "SIM",    # flake8-simplify
    "TID252", # ban relative imports
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "SIM116", # use dict instead of if-else (not always clearer)
    "B008",   # function call in argument defaults (FastAPI Depends pattern)
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
# Uncomment when adding async tests:
# asyncio_mode = "auto"
# asyncio_default_fixture_loop_scope = "function"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["app"]
